apps/echo-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: demo2
spec:
  type: ClusterIP
  selector:
    app: echo-demo
  ports:
  - port: 80
    targetPort: 5678
